auto-test/tests/chapter_18/invalid_types/extra_credit/scalar_required/cast_union_to_int.c

union u {
    int i;
};

int main(void) {
    union u x = {10};
    return (int)x;
}